# loopy

./: .gitignore  CHANGELOG.md  Makefile  README.md  examples.ipynb  loopy.py  pyproject.toml  stress_test.py  test_advanced.py  test_loopy.py
.github/workflows/: tests.yml
examples/: __init__.py  bookmarks.loopy  bookmarks.py  examples.ipynb  knowledge_graph.loopy  knowledge_graph.py  org_chart.loopy  org_chart.py  product_catalog.loopy  product_catalog.py  recipes.loopy  recipes.py
mcp/: loopy-shell.policy.toml  loopy_mcp.py  policy.py  pyproject.toml  server.py
src/loopy/: __init__.py  core.py  core_v2.py  file_store.py  shell.py
tests/: test_advanced.py  test_edge_cases.py  test_file_store.py  test_loopy.py  test_shell.py  test_stress.py
