[project]
name = "loopy-fs"
version = "0.1.0"
description = "A filesystem-like API over a tree stored as a string"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tanmay Gupta", email = "tg1482@stern.nyu.edu" }
]
requires-python = ">=3.10"
dependencies = []
keywords = ["filesystem", "tree", "data-structure", "agents", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/tg1482/loopy"
Repository = "https://github.com/tg1482/loopy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loopy"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "twine>=5.0.0",
]
